<?xml version="1.0" encoding="utf-8"?>
<!--
/*
* Copyright (C) 2008 The Android Open Source Project
*
* Licensed under the Apache License, Version 2.0 (the "License");
* you may not use this file except in compliance with the License.
* You may obtain a copy of the License at
*
*      http://www.apache.org/licenses/LICENSE-2.0
*
* Unless required by applicable law or agreed to in writing, software
* distributed under the License is distributed on an "AS IS" BASIS,
* WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
* See the License for the specific language governing permissions and
* limitations under the License.
*/
-->

<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Manifest configuration. -->
    <skip />
    <!-- Do not translate. android:sharedUserId of this application. -->
    <string name="sharedUserId" translate="false"><xliff:g id="x"></xliff:g></string>
    <!-- Do not translate. android:process of this application. -->
    <string name="process" translate="false"><xliff:g id="x"></xliff:g></string>

    <!-- General -->
    <skip />
    <!-- Application name -->
    <string name="application_name">Launcher</string>
    <!-- Name for all applications running as this uid. -->
    <string name="uid_name">Android Core Apps</string>
    <!-- Default folder name -->
    <string name="folder_name">Folder</string>
    <!-- Title of dialog that appears after user selects Wallpaper from menu -->
    <string name="chooser_wallpaper">Select wallpaper from</string>
    <!-- Button label on Wallpaper Gallery screen; user selects this button to set a specific wallpaper -->
    <string name="wallpaper_instructions">Set wallpaper</string>
    <!-- Option in "Select wallpaper from" dialog box -->
    <string name="pick_wallpaper">Salvage Wallpapers</string>
    <!-- Displayed when user selects a shortcut for an app that was uninstalled -->
    <string name="activity_not_found">Application is not installed on your phone.</string>
    <!-- List item for configuring the current wallpaper -->
    <string name="configure_wallpaper">Configure...</string>

    <!-- Folders -->
    <skip />
    <!-- Label of Folder name field in Rename folder dialog box -->
    <string name="rename_folder_label">Folder name</string>
    <!-- Title of dialog box -->
    <string name="rename_folder_title">Rename folder</string>
    <!-- Buttons in Rename folder dialog box -->
    <string name="rename_action">OK</string>
    <!-- Buttons in Rename folder dialog box -->
    <string name="cancel_action">Cancel</string>

    <!-- Shortcuts -->
    <skip />
    <!-- Title of dialog box -->
    <string name="menu_item_add_item">Add to Home screen</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all apps -->
    <string name="group_applications">Applications</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all shortcuts -->
    <string name="group_shortcuts">Shortcuts</string>
    <!-- Options in "Add to Home" dialog box; Title of the folder gadget -->
    <string name="group_folder">New folder</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all live folders -->
    <string name="group_live_folders">Folders</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of all widgets/gadgets -->
    <string name="group_widgets">Widgets</string>
    <!-- Options in "Add to Home" dialog box; Title of the group containing the list of apps that can set the wallpaper-->
    <string name="group_wallpapers">Salvage Wallpapers</string>
    <!-- Options in "Add to Home" dialog box; Name of the Folder widget-->
    <string name="add_folder">Folder</string>
    <!-- Options in "Add to Home" dialog box; Name of the Clock widget-->
    <string name="add_clock">Clock</string>
    <!-- Options in "Add to Home" dialog box; Name of the Picture frame widget-->
    <string name="add_photo_frame">Picture frame</string>
    <!-- Error message when user has filled a home screen, possibly not used -->
    <string name="out_of_space">No more room on this Home screen.</string>
    <!-- Message displayed when a shortcut is created by an external application -->
    <string name="shortcut_installed">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" created.</string>
    <!-- Message displayed when a shortcut is uninstalled by an external application -->
    <string name="shortcut_uninstalled">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" was removed.</string>
    <!-- Message displayed when an external application attemps to create a shortcut that already exists -->
    <string name="shortcut_duplicate">Shortcut \"<xliff:g id="name" example="Browser">%s</xliff:g>\" already exists.</string>

    <!-- Title of dialog when user is selecting shortcut to add to homescreen -->
    <string name="title_select_shortcut">Select shortcut</string>
    <!-- Title of dialog when user is selecting an application to add to homescreen -->
    <string name="title_select_application">Select application</string>
    <!-- Title of dialog when user is selecting live folder to add to homescreen -->
    <string name="title_select_live_folder">Select folder</string>

    <!-- All applications label for accessibilty (spoken when the button gets focus). -->
    <string name="all_apps_button_label">All applications</string>
    <!-- Label for button in all applications label to go back home (to the workspace / desktop)
         for accessibilty (spoken when the button gets focus). -->
    <string name="all_apps_home_button_label">Home</string>

    <!-- Menus items: -->
    <skip />
    <!-- Verb, menu item used to add an item on the desktop -->
    <string name="menu_add">Add</string>
    <!-- Menu item used to manage installed applications -->
    <string name="menu_manage_apps">Manage apps</string>
    <!-- Noun, menu item used to set the desktop's wallpaper -->
    <string name="menu_wallpaper">Wallpaper</string>
    <!-- Verb, menu item used to initiate global search -->
    <string name="menu_search">Search</string>
    <!-- Noun, menu item used to bring down the notifications shade -->
    <string name="menu_notifications">Notifications</string>
    <!-- Noun, menu item used to show the gestures settings -->
    <string name="menu_gestures">Gestures</string>
    <!-- Noun, menu item used to show the system settings -->
    <string name="menu_settings">Settings</string>
    <!-- Start of Preferences of Launcher2 -->
    <string name="launcher_settings">Configure</string>

    <!-- Permissions: -->
    <skip />
    <!-- Permission short label -->
    <string name="permlab_install_shortcut">install shortcuts</string>
    <!-- Permission description -->
    <string name="permdesc_install_shortcut">Allows an application to add
        shortcuts without user intervention.</string>
    <!-- Permission short label -->
    <string name="permlab_uninstall_shortcut">uninstall shortcuts</string>
    <!-- Permission description -->
    <string name="permdesc_uninstall_shortcut">Allows an application to remove
        shortcuts without user intervention.</string>
    <!-- Permission short label -->
    <string name="permlab_read_settings">read Home settings and shortcuts</string>
    <!-- Permission description -->
    <string name="permdesc_read_settings">Allows an application to read the settings and
        shortcuts in Home.</string>
    <!-- Permission short label -->
    <string name="permlab_write_settings">write Home settings and shortcuts</string>
    <!-- Permission description -->
    <string name="permdesc_write_settings">Allows an application to change the settings and
        shortcuts in Home.</string>

    <!-- Widgets: -->
    <skip />

    <!-- Text to show user in place of a gadget when we can't display it properly -->
    <string name="gadget_error_text">Problem loading widget</string>

    <!-- URL to use when detecting the current default browser.
         Attempts to mimic homepage_base in Browser; {CID} should be replaced
         by the client-id, e.g. "android-google". -->
    <string name="default_browser_url" translatable="false">
        http://www.google.com/m?client=ms-{CID}&amp;source=android-home-hotseat</string>

    <!--  Preferences  -->
    <string name="launcher_general_settings">Launcher General Settings</string>
    <string name="ui_launcher_settings">UI Settings</string>
    <string name="pref_icon_settings">Icons (must re-place icons)</string>
    <string name="pref_summary_hide_labels">Check to hide desktop icon labels</string>
    <string name="pref_title_hide_labels">Hide labels</string>
    <string name="pref_summary_launcher_fullscreen">Hide notification bar on homescreen</string>
    <string name="pref_title_launcher_fullscreen">Full screen mode</string>
    <string name="pref_title_wallpaper_scrolling">Wallpaper scrolling</string>
    <string name="pref_summary_wallpaper_scrolling">Enable/disable wallpaper scroll</string>

    <!-- Launcher Orientation -->
    <string name="pref_title_orientation">Launcher rotation</string>
    <string name="pref_sum_orientation">Enable/disable launcher rotation</string>

    <!-- Screens -->
    <string name="pref_screen_desk_title">Desktop screen settings</string>
    <string name="pref_screen_desk_summary">Screen count</string>
    <string name="homescreen_elements">Home Screens</string>
    <string name="homescreen_elements_about">Select number of home screens</string>
    <string name="choose_num_screens">Choose the number of home screens</string>
    <string name="three_screens">Three screens</string>
    <string name="five_screens">Five screens</string>
    <string name="seven_screens">Seven screens</string>
    
    <string name="number_screens_title">Change the number of screens</string>
    <string name="screen_changer_title">Screen number</string>
    <string name="screen_changer_title_summary">Set the number of screens</string>

</resources>
